# fastapi_rss_aggregator_example

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint-app.sh  pyproject.toml  requirements.txt
app/: aerich.ini  alembic.ini  main.py
app/core/: config.py  events.py  fields.py
app/db/: database.py  events.py
src/: alembic.ini  main.py  pyproject.toml
src/api/dependencies/: database.py  entry.py  feeds.py
src/api/routes/: api.py  entries.py  feeds.py  main_page.py
src/app/: main.py
src/app/api/dependencies/: database.py  entry.py  feeds.py
src/app/api/routes/: api.py  entries.py  feeds.py
src/app/core/: config.py
src/app/db/: database.py
src/app/db/repositories/: base.py  entries.py  feeds.py  tags.py
src/app/models/: entries.py  entry.py  feeds.py  tags.py
src/app/resources/: strings.py
src/app/schemas/: common.py  entries.py  feeds.py  tags.py
src/app/services/: feeds.py
src/celery_app/: celery.py  tasks.py
src/core/: config.py
src/db/: database.py  errors.py
src/db/repositories/: base.py  entries.py  feeds.py  tags.py
src/migrations/: env.py
src/migrations/versions/: 0034534dcc23_.py  562776cc4c1c_.py  d32cd8395f9f_.py
src/models/: __init__.py  entries.py  feeds.py  tags.py
src/resources/: strings.py
src/schemas/: entries.py  feeds.py  tags.py
src/services/: collector.py  entries.py  errors.py  feeds.py
src/tests/: conftest.py  example_test.py  factories.py  testing_helpers.py
src/tests/mock/: valid_rss_response.xml
src/tests/test_routes/: test_entry.py  test_feeds.py
(+16 files in other folders)
